c1/update_ancestors
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/update_ancestors/src/proof.c:1354:6: error: expected expression
if ( struct node ) 
     ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/update_ancestors/src/proof.c:1362:13: error: expected identifier or '('
struct node = node->parent; 
            ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/update_ancestors/src/proof.c:1364:9: error: expected expression
while ( struct node ); 
        ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/update_ancestors/src/proof.c:1364:9: error: expected ')'
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/update_ancestors/src/proof.c:1364:7: note: to match this '('
while ( struct node ); 
      ^
4 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/update_ancestors/src/obj/proof.o] Error 1
